# ShankBot

./: CMakeLists.txt  README.md
api/: Character.hpp  Frame.hpp  Object.hpp  RequestResult.hpp  Requester.hpp  config.hpp
api/src/: Requester.cpp
crawler/: gief-them-gifs-from-category-images.py  gief-them-gifs-from-generic-categories.py  gief-them-gifs-from-list-of-creatures.py  gief-them-gifs.py
docs/: 7z_types_8h.html  7z_types_8h__dep__incl.map  7z_types_8h__dep__incl.md5  7z_types_8h_source.html  _alloc_8c.html  _alloc_8c__incl.map  _alloc_8c__incl.md5  _alloc_8c_a21b0fb4a9be7b667985100e15bb13b09_icgraph.map  _alloc_8c_a21b0fb4a9be7b667985100e15bb13b09_icgraph.md5  _alloc_8c_af49e8e238d13b4be3309a182bbed6b96_cgraph.map  _alloc_8c_af49e8e238d13b4be3309a182bbed6b96_cgraph.md5  _alloc_8c_source.html  _alloc_8h.html  _alloc_8h__dep__incl.map  _alloc_8h__dep__incl.md5  _alloc_8h__incl.map  _alloc_8h__incl.md5  _alloc_8h_source.html  _appearances_reader_8cpp.html  _appearances_reader_8cpp__incl.map  _appearances_reader_8cpp__incl.md5  _appearances_reader_8cpp_source.html  _appearances_reader_8hpp.html  _appearances_reader_8hpp__dep__incl.map  _appearances_reader_8hpp__dep__incl.md5  _appearances_reader_8hpp__incl.map  _appearances_reader_8hpp__incl.md5  _appearances_reader_8hpp_source.html  _attack_request_8cpp.html  _attack_request_8cpp__incl.map  _attack_request_8cpp__incl.md5  _attack_request_8cpp_source.html  _attack_request_8hpp.html  _attack_request_8hpp__dep__incl.map  _attack_request_8hpp__dep__incl.md5  _attack_request_8hpp__incl.map  _attack_request_8hpp__incl.md5  _attack_request_8hpp_source.html  _buffer_8cpp.html  _buffer_8cpp__incl.map  (+3755 more)
docs/search/: all_0.js  all_1.js  all_10.js  (+181 more)
examples/: PrintScreenshot.cpp  SendInput.cpp
graphics/: CombatSquareSample.hpp  Constants.hpp  Draw.hpp  DynQImage.hpp  DynamicLibrary.hpp  Equipment.hpp  Frame.hpp  GraphicsLayer.cbp.mak  GraphicsMonitor.cbp.mak  GraphicsMonitorReader.hpp  Gui.hpp  Makefile  Map2d.inl  MiniMap.hpp  MovementMonitor.hpp  README.md  SceneObjectIdentifier.hpp  ShankBot.hpp  SpriteDatabase.hpp  SpriteInfo.hpp  SpriteObjectBindings.hpp  TibiaContext.hpp  TileBufferCache.hpp  VersionControl.hpp  libGraphicsMonitor.cbp.mak  makeTiles
incl/: PixelArray.hpp
injection/: DetourHolder.hpp  Injection.hpp  Monitor.hpp  SharedMemoryProtocol.hpp  TextureUnit.hpp  TextureUnitHolder.hpp  TmpFuncs.hpp  utility.hpp
lzma/: config.hpp  lzma.hpp
messaging/: AttackRequest.hpp  Connection.hpp  ConnectionManager.hpp  Event.hpp  EventQueue.hpp  FrameRequest.hpp  FrameResponse.hpp  GoRequest.hpp  GuiEvents.hpp  LoginRequest.hpp  LoginResponse.hpp  Message.hpp  NewEvent.hpp  NewMessage.hpp  ObjectResponse.hpp  Requester.hpp  Response.hpp  Serializable.hpp  config.hpp  messageHelpers.hpp
monitor/: CombatSquareSample.hpp  Constants.hpp  Draw.hpp  FileIo.hpp  FontSample.hpp  Frame.hpp  FrameAssembler.hpp  FrameFile.hpp  FrameFileJson.hpp  FrameParser.hpp  GenericType.hpp  GlyphsFile.hpp  GraphicsMonitorReader.hpp  Gui.hpp  GuiParser.hpp  GuiSpriteParser.hpp  Input.hpp  Makefile  MiniMap.hpp  OutfitAddonMerger.hpp  OutfitResolver.hpp  ParsedFrame.hpp  ParsedFrameFile.hpp  README.md  RawImage.hpp  RectParser.hpp  Scene.hpp  SceneDiff.hpp  SceneParser.hpp  Semaphore.hpp  Semaphore.inl  SequenceTree.hpp  ShankBot.hpp  SharedMemoryProtocol.hpp  SideBarWindow.hpp  SideBarWindowAssembler.hpp  SideBarWindowDiff.hpp  Sprite.hpp  SpriteInfo.hpp  SpriteObjectBindings.hpp  (+10 more)
scripts/: extractData.py  extractSprites.py
spriteIdentifier/: Makefile  README.md  extractData.py  extractSprites.py  formatSprites  main.cpp  run
src/: PixelArray.cpp
test/: utility.hpp
tibiaassets/: AppearancesReader.hpp  CatalogContent.hpp  GraphicsResourceReader.hpp  Object.hpp  SpriteReader.hpp  config.hpp  constants.hpp
utility/: Buffer.hpp  Color.hpp  FunctionDetour.hpp  Matrix.hpp  PixelFormat.hpp  Rect.hpp  Vertex.hpp  config.hpp  file.hpp  utility.hpp
(+206 files in other folders)
